--- a/app/src/main/res/layout/activity_taxi_main.xml
+++ b/app/src/main/res/layout/activity_taxi_main.xml
@@ -49,7 +49,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="42dp"
-        android:layout_marginEnd="35dp"
         android:text="택시"
         android:textSize="12dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView7"
@@ -140,8 +139,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button2"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:iconifiedByDefault="false" />
-        app:layout_constraintTop_toBottomOf="@+id/button2">
+        android:iconifiedByDefault="false">
     </SearchView>
 
     <TextView
