[feat] 기본 앱 연결

--- a/app/src/main/res/layout/activity_default_app.xml
+++ b/app/src/main/res/layout/activity_default_app.xml
@@ -21,12 +21,12 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/pretendard_bold"
         android:text="기본 앱 교육"
-        android:textSize="24dp"
+        android:textSize="24sp"
         android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="19dp"
-        android:layout_marginLeft="32dp" />
+        android:layout_marginStart="32dp" />
 
     <TextView
         android:id="@+id/iconedu_tool_2"
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@id/iconedu_tool"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="1dp"
-        android:layout_marginLeft="32dp" />
+        android:layout_marginStart="32dp" />
 
     <ImageView
         android:layout_width="50dp"
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@id/iconedu_tool_2"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="73dp" />
+        android:layout_marginStart="73dp" />
 
     <ImageView
         android:id="@+id/star"
@@ -67,14 +67,14 @@
         app:layout_constraintTop_toBottomOf="@id/iconedu_tool_2"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="73dp"/>
+        android:layout_marginEnd="73dp"/>
 
     <!--카메라-->
     <ImageView
-        android:id="@+id/round_corner_white"
+        android:id="@+id/camera_edu_box"
         android:layout_width="match_parent"
         android:layout_height="141dp"
-        android:src="@drawable/round_corner_white"
+        android:background="@drawable/round_corner_white"
         app:layout_constraintTop_toBottomOf="@id/star"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -86,10 +86,10 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ic_camera"
-        app:layout_constraintTop_toTopOf="@id/round_corner_white"
-        app:layout_constraintStart_toStartOf="@id/round_corner_white"
+        app:layout_constraintTop_toTopOf="@id/camera_edu_box"
+        app:layout_constraintStart_toStartOf="@id/camera_edu_box"
         android:layout_marginTop="24dp"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="26dp"
         />
 
     <TextView
@@ -98,10 +98,10 @@
         app:layout_constraintStart_toEndOf="@id/camera"
         app:layout_constraintTop_toTopOf="@id/camera"
         android:text="카메라"
-        android:textSize="32dp"
+        android:textSize="32sp"
         android:fontFamily="@font/pretendard_semibold"
         android:textColor="@color/black"
-        android:layout_marginLeft="26dp" />
+        android:layout_marginStart="26dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -109,20 +109,20 @@
         app:layout_constraintStart_toEndOf="@id/camera"
         app:layout_constraintTop_toTopOf="@id/camera"
         android:text="사진찍기"
-        android:textSize="26dp"
+        android:textSize="26sp"
         android:fontFamily="@font/pretendard_regular"
         android:textColor="#838383"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="26dp"
         android:layout_marginTop="35dp"
         />
 
     <!--전화-->
     <ImageView
-        android:id="@+id/call_round_corner_white"
+        android:id="@+id/call_edu_box"
         android:layout_width="match_parent"
         android:layout_height="141dp"
-        android:src="@drawable/round_corner_white"
-        app:layout_constraintTop_toBottomOf="@id/round_corner_white"
+        android:background="@drawable/round_corner_white"
+        app:layout_constraintTop_toBottomOf="@id/camera_edu_box"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="59dp"
@@ -133,10 +133,10 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ic_call"
-        app:layout_constraintTop_toTopOf="@id/call_round_corner_white"
-        app:layout_constraintStart_toStartOf="@id/call_round_corner_white"
+        app:layout_constraintTop_toTopOf="@id/call_edu_box"
+        app:layout_constraintStart_toStartOf="@id/call_edu_box"
         android:layout_marginTop="24dp"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="26dp"
         />
 
     <TextView
@@ -145,10 +145,10 @@
         app:layout_constraintStart_toEndOf="@id/call_ic"
         app:layout_constraintTop_toTopOf="@id/call_ic"
         android:text="전화"
-        android:textSize="32dp"
+        android:textSize="32sp"
         android:fontFamily="@font/pretendard_semibold"
         android:textColor="@color/black"
-        android:layout_marginLeft="26dp" />
+        android:layout_marginStart="26dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -156,20 +156,20 @@
         app:layout_constraintStart_toEndOf="@id/call_ic"
         app:layout_constraintTop_toTopOf="@id/call_ic"
         android:text="부제목"
-        android:textSize="26dp"
+        android:textSize="26sp"
         android:fontFamily="@font/pretendard_regular"
         android:textColor="#838383"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="26dp"
         android:layout_marginTop="35dp"
         />
 
     <!--문자메세지-->
     <ImageView
-        android:id="@+id/message_round_corner_white"
+        android:id="@+id/message_edu_box"
         android:layout_width="match_parent"
         android:layout_height="141dp"
-        android:src="@drawable/round_corner_white"
-        app:layout_constraintTop_toBottomOf="@id/call_round_corner_white"
+        android:background="@drawable/round_corner_white"
+        app:layout_constraintTop_toBottomOf="@id/call_edu_box"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="59dp"
@@ -180,10 +180,10 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/ic_message"
-        app:layout_constraintTop_toTopOf="@id/message_round_corner_white"
-        app:layout_constraintStart_toStartOf="@id/message_round_corner_white"
+        app:layout_constraintTop_toTopOf="@id/message_edu_box"
+        app:layout_constraintStart_toStartOf="@id/message_edu_box"
         android:layout_marginTop="24dp"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="26dp"
         />
 
     <TextView
@@ -192,10 +192,10 @@
         app:layout_constraintStart_toEndOf="@id/message_ic"
         app:layout_constraintTop_toTopOf="@id/message_ic"
         android:text="문자메세지"
-        android:textSize="32dp"
+        android:textSize="32sp"
         android:fontFamily="@font/pretendard_semibold"
         android:textColor="@color/black"
-        android:layout_marginLeft="26dp" />
+        android:layout_marginStart="26dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -203,10 +203,10 @@
         app:layout_constraintStart_toEndOf="@id/message_ic"
         app:layout_constraintTop_toTopOf="@id/message_ic"
         android:text="부제목"
-        android:textSize="26dp"
+        android:textSize="26sp"
         android:fontFamily="@font/pretendard_regular"
         android:textColor="#838383"
-        android:layout_marginLeft="26dp"
+        android:layout_marginStart="26dp"
         android:layout_marginTop="35dp"
         />
 
