--- a/app/src/main/res/layout/activity_default_app.xml
+++ b/app/src/main/res/layout/activity_default_app.xml
@@ -70,7 +70,7 @@
         android:layout_marginEnd="73dp"/>
 
     <!--카메라-->
-    <ImageView
+    <com.sungkyul.synergy.utils.DynamicButton
         android:id="@+id/camera_edu_box"
         android:layout_width="match_parent"
         android:layout_height="141dp"
@@ -117,7 +117,7 @@
         />
 
     <!--전화-->
-    <ImageView
+    <com.sungkyul.synergy.utils.DynamicButton
         android:id="@+id/call_edu_box"
         android:layout_width="match_parent"
         android:layout_height="141dp"
@@ -164,7 +164,7 @@
         />
 
     <!--문자메세지-->
-    <ImageView
+    <com.sungkyul.synergy.utils.DynamicButton
         android:id="@+id/message_edu_box"
         android:layout_width="match_parent"
         android:layout_height="141dp"
