--- a/app/src/main/res/layout/card_list_item.xml
+++ b/app/src/main/res/layout/card_list_item.xml
@@ -13,26 +13,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/air" />
-
-    <ImageView
-        android:id="@+id/imageView_card2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/air" />
-
-    <ImageView
-        android:id="@+id/imageView_card3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/air" />
+        app:srcCompat="@drawable/card" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
