--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -10,13 +10,11 @@
         android:id="@+id/imageView"
         android:layout_width="410dp"
         android:layout_height="580dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="330dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/map_background" />
 
     <TextView
@@ -54,12 +52,12 @@
         android:text="일반호줄"
         android:textAlignment="viewStart"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.528"
+        app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.701" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.72" />
 
     <TextView
         android:id="@+id/textView4"
@@ -116,7 +114,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="188dp"
+        android:layout_marginStart="168dp"
         android:layout_marginTop="11dp"
         android:text="쿠폰"
         android:textStyle="bold"
@@ -129,13 +127,12 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="136dp"
         android:text="포인트  0P  >"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.844" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <View
         android:id="@+id/view5"
@@ -181,20 +178,20 @@
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="88dp"
         android:text="예상"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/textView6"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/view5" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView10"
+        app:layout_constraintHorizontal_bias="0.941"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="92dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="88dp"
         android:text="6,800원"
         android:textColor="#000000"
         android:textSize="16sp"
@@ -204,8 +201,8 @@
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="130dp"
-        android:layout_height="40dp"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
         android:layout_marginBottom="10dp"
         android:background="#2196F3"
         android:text="호출하기"
@@ -213,17 +210,21 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.96"
+        app:layout_constraintHorizontal_bias="0.943"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view6"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.853" />
 
     <ImageView
         android:id="@+id/imageView18"
         android:layout_width="96dp"
         android:layout_height="57dp"
-        app:srcCompat="@drawable/taxi"
-        tools:layout_editor_absoluteX="9dp"
-        tools:layout_editor_absoluteY="589dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.698"
+        app:srcCompat="@drawable/taxi" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
