--- a/app/src/main/res/layout/activity_pay_mactivity.xml
+++ b/app/src/main/res/layout/activity_pay_mactivity.xml
@@ -43,19 +43,19 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.994" />
+        app:layout_constraintVertical_bias="0.912" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/sliderViewPager"
         android:layout_width="390dp"
         android:layout_height="170dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="304dp"
         app:layout_constraintBottom_toBottomOf="@+id/view4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.761"
+        app:layout_constraintHorizontal_bias="0.476"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.456">
+        app:layout_constraintVertical_bias="0.994">
 
 
     </androidx.viewpager2.widget.ViewPager2>
@@ -65,19 +65,19 @@
         android:layout_width="410dp"
         android:layout_height="1dp"
         android:background="#939393"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/sliderViewPager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.462" />
+        app:layout_constraintTop_toTopOf="@+id/view4"
+        app:layout_constraintVertical_bias="0.912" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="170dp"
         android:text="결제수단"
         android:textColor="#000000"
@@ -209,7 +209,7 @@
 
     <Button
         android:id="@+id/button15"
-        android:layout_width="0dp"
+        android:layout_width="40dp"
         android:layout_height="25dp"
         android:layout_marginEnd="132dp"
         android:layout_marginBottom="15dp"
@@ -221,7 +221,7 @@
 
     <Button
         android:id="@+id/button16"
-        android:layout_width="0dp"
+        android:layout_width="40dp"
         android:layout_height="0dp"
         android:layout_marginEnd="113dp"
         android:layout_marginBottom="2dp"
@@ -254,9 +254,9 @@
         android:layout_width="410dp"
         android:layout_height="1dp"
         android:background="#939393"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.669" />
+        app:layout_constraintTop_toBottomOf="@+id/sliderViewPager"
+        app:layout_constraintVertical_bias="0.12" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
