--- a/app/src/main/res/layout/learning_item_button.xml
+++ b/app/src/main/res/layout/learning_item_button.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!--learningFragment에 recyclerView Item 버튼-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/learning_layout"
         android:layout_width="148dp"
         android:layout_height="200dp"
         android:layout_margin="16dp"
-        android:layout_weight="1"
         android:background="@drawable/round_corner_white"
         android:orientation="vertical"
         android:elevation="6dp"
@@ -23,28 +22,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="14dp"
-            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
             app:layout_constraintStart_toStartOf="@id/learning_layout"
             app:layout_constraintTop_toTopOf="@id/learning_layout"
             android:text="아이콘"
             android:letterSpacing="-0.08"
             android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/black"
-            android:textSize="34dp"
+            android:textSize="34sp"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/learning_tv2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="-13dp"
-            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
             app:layout_constraintStart_toStartOf="@id/learning_layout"
             app:layout_constraintTop_toTopOf="@id/learning_layout"
             android:text="교육"
             android:letterSpacing="-0.08"
             android:fontFamily="@font/pretendard_semibold"
             android:textColor="#919191"
-            android:textSize="30dp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <com.github.mikephil.charting.charts.HorizontalBarChart
@@ -58,8 +57,14 @@
             android:layout_height="58dp"
             android:layout_gravity="end"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
             android:src="@drawable/ic_edubotton_icon" />
     </LinearLayout>
-</LinearLayout>
 
+    <com.sungkyul.synergy.utils.DynamicButton
+        android:id="@+id/edu_button"
+        android:layout_width="148dp"
+        android:layout_height="200dp"
+        android:layout_margin="16dp"
+        android:translationZ="25dp"/>
+</FrameLayout>
