--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,4 +49,8 @@
     <color name="naver_search_grey_line">#F5F5F8</color>
     <color name="naver_search_dot">#D9D9DC</color>
     <color name="naver_search_bottom">#F9FCFF</color>
+
+    <!-- 실습 공간 -->
+    <color name="icon_learning_btn">#3DB2FF</color>
+
 </resources>
