--- a/app/src/main/res/layout/activity_dlv_main.xml
+++ b/app/src/main/res/layout/activity_dlv_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#E4E4E4"
     tools:context=".edu_space.delivery.DlvMainActivity">
-
+    <!--검색어는 자장면으로 교육화면 구성부탁드립니다. !-->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigationView"
         android:layout_width="wrap_content"
